--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "grape-web",
   "version": "0.40.0",
   "dependencies": {
+    "jss": "^5.5.6",
+    "jss-default-unit": "^4.1.4",
+    "jss-expand": "^1.6.0",
+    "jss-extend": "^2.0.6",
     "jss-isolate": "^1.0.0",
+    "jss-props-sort": "^2.0.2",
+    "jss-vendor-prefixer": "^3.0.3",
     "lodash": "^3.10.0",
     "react-jss": "4.2.0"
   },
