--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jss-props-sort": "^3.0.0",
     "jss-vendor-prefixer": "^4.0.0",
     "lodash": "^3.10.0",
-    "react-jss": "^5.0.0"
+    "react-jss": "5.1.0"
   },
   "devDependencies": {
     "babel": "^5.6.14",
