--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "react-jss": "^5.0.0"
   },
   "devDependencies": {
-    "babel": "^5.6.14",
-    "babel-core": "^5.5.8",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^5.1.4",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "cpy": "^3.4.1",
     "es5-shim": "^4.1.10",
     "es6-shim": "^0.32.2",
