--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "all": "npm run build",
+    "all": "npm run lint && npm run test && npm run build",
     "clean": "rm -fr ./lib/*",
     "build": "npm run clean && npm run build:lib && npm run svg",
     "build:lib": "babel src --out-dir lib",
