--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^15.3.0",
     "react-jss": "^8.3.3",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "reset-jss": "^0.1.0",
     "styled-jss": "^1.2.0"
   },
