--- a/package.json
+++ b/package.json
@@ -5,31 +5,30 @@
     "lib"
   ],
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
     "classnames": "^2.2.5",
     "color": "^0.10.1",
     "css-functions": "^1.0.5",
     "css-vendor": "^1.1.0",
     "grape-theme": "3.x",
-    "jss": "^9.8.7",
-    "jss-default-unit": "^8.0.2",
-    "jss-expand": "^5.3.0",
-    "jss-extend": "^6.2.0",
+    "jss": "^10.0.0-alpha.22",
     "jss-increase-specificity": "^0.3.5",
-    "jss-isolate": "^5.1.0",
-    "jss-props-sort": "^6.0.0",
-    "jss-vendor-prefixer": "^8.0.1",
+    "jss-plugin-expand": "^10.0.0-alpha.22",
+    "jss-plugin-extend": "^10.0.0-alpha.22",
+    "jss-plugin-isolate": "^10.0.0-alpha.22",
+    "jss-plugin-props-sort": "^10.0.0-alpha.22",
+    "jss-plugin-vendor-prefixer": "^10.0.0-alpha.22",
+    "jss-preset-default": "^10.0.0-alpha.22",
     "lodash": "^4.17.10",
-    "material-ui": "1.0.0-beta.22",
     "mdurl": "^1.0.1",
     "normalize-jss": "^3.1.0",
     "prop-types": "^15.5.10",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-jss": "^8.3.3",
+    "react-jss": "^10.0.0-alpha.22",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "reset-jss": "^0.1.0",
-    "styled-jss": "^2.2.3"
+    "reset-jss": "^0.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -66,7 +65,6 @@
     "node-libs-browser": "^0.5.2",
     "prettier": "^1.13.5",
     "react-addons-test-utils": "^0.14.0",
-    "react-styleguidist": "^5.1.1",
     "svgo": "^0.6.0",
     "webpack": "^1.10.1",
     "webpack-dev-server": "^1.10.1"
