--- a/package.json
+++ b/package.json
@@ -5,30 +5,30 @@
     "lib"
   ],
   "dependencies": {
-    "@material-ui/core": "^4.2.0",
+    "@material-ui/core": "^4.8.2",
     "classnames": "^2.2.5",
     "color": "^0.10.1",
     "css-functions": "^1.0.5",
     "css-vendor": "^1.1.0",
     "grape-theme": "3.x",
-    "jss": "^10.0.0-alpha.22",
+    "jss": "^10.0.3",
     "jss-increase-specificity": "^0.3.5",
-    "jss-plugin-expand": "^10.0.0-alpha.22",
-    "jss-plugin-extend": "^10.0.0-alpha.22",
-    "jss-plugin-isolate": "^10.0.0-alpha.22",
-    "jss-plugin-props-sort": "^10.0.0-alpha.22",
-    "jss-plugin-vendor-prefixer": "^10.0.0-alpha.22",
-    "jss-preset-default": "^10.0.0-alpha.22",
+    "jss-plugin-expand": "^10.0.3",
+    "jss-plugin-extend": "^10.0.3",
+    "jss-plugin-isolate": "^10.0.3",
+    "jss-plugin-props-sort": "^10.0.3",
+    "jss-plugin-vendor-prefixer": "^10.0.3",
+    "jss-preset-default": "^10.0.3",
     "lodash": "^4.17.10",
     "mdurl": "^1.0.1",
     "normalize-jss": "^3.1.0",
     "prop-types": "^15.5.10",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-jss": "^10.0.0-alpha.22",
+    "react-jss": "^10.0.3",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "reset-jss": "^0.1.0"
+    "reset-jss": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
